<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textSize="32dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Subtitle_Login" />

    <EditText
        android:id="@+id/Email_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="24sp"
        android:hint="E-mail Adresa"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/Password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="24sp"
        android:hint="Lozinka"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Login"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_Text" />

    <TextView
        android:id="@+id/SwitchRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registracija"
        android:layout_marginBottom="50dp"/>


</LinearLayout>