<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="match_parent"
    tools:context=".DodadiAktivnost"

    >



    <TextView
        android:id="@+id/headingDA"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:text="@string/dodadi_aktivnost" />

    <Spinner
        android:id="@+id/aktivnosti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/aktivnosti"
        android:prompt="@string/dodadi_aktivnost"
        android:minHeight="48dp" />

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/aktivnostiOpis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />





    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="200sp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/tDatum" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Odberi Datum"
            android:id="@+id/datum"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:layout_width="200dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/tVreme" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Odberi Vreme"
            android:id="@+id/vreme"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/povtorlivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/povtorliva_aktivnost" />

        <CheckBox
            android:id="@+id/itno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itno" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:layout_width="200dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/tLokacija" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Odberi Lokacija"
            android:id="@+id/lokacija"/>

    </LinearLayout>



    <Button
        android:id="@+id/dodadiAktivnost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/dodadi_aktivnost"
        android:onClick="result"
        tools:ignore="DuplicateSpeakableTextCheck" />



</LinearLayout>